Fix double gap on contact form

--- a/style.css
+++ b/style.css
@@ -554,6 +554,7 @@ footer {
 }
 
 #error-message {
+  display: none;
   color: red;
   text-align: center;
 }
@@ -736,5 +737,9 @@ footer {
 
   .contact-grid-item-2 {
     grid-column: 2 / span 1;
+  }
+
+  #error-message {
+    text-align: left;
   }
 }
